--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,10 +6,14 @@ services:
     build: ./backend
     restart: always
     command: "sh -c 'alembic upgrade head && uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000'"
+    # command: "sh -c 'python -m alembic upgrade head && python app/initial_data.py && uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000'"
+
     volumes:
       - ./backend:/code
     expose:
       - "8000"
+    ports:
+      - 8000:8000  # Remove this on production
     env_file: ".env"
     depends_on:
       - database
