--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ python-multipart = "^0.0.5"
 fastapi-pagination = {extras = ["sqlmodel"], version = "^0.9.1"}
 fastapi-cache2 = {extras = ["redis"], version = "^0.1.8"}
 aioredis = "^2.0.1"
+google-cloud-dialogflow = "^2.15.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
